# scoreSUmmary

./: .gitignore  README.md  pyproject.toml  test_script.py
.github/agents/: copilot-instructions.md
.specify/memory/: constitution.md
specs/001-batting-metrics/: data-model.md  plan.md  quickstart.md  spec.md  tasks.md
specs/001-batting-metrics/checklists/: requirements.md
specs/001-batting-metrics/contracts/: innings_contract.md
src/: cli.py  innings_state.py  main.py  metrics_compute.py  summary_output.py  workflow.py
